4.0/_sources/conv.rst.txt
.. |ActualConstant| replace:: :class:`~hydpy.models.conv.conv_fluxes.ActualConstant`
.. |ActualFactor| replace:: :class:`~hydpy.models.conv.conv_fluxes.ActualFactor`
.. |Calc_ActualConstant_ActualFactor_V1| replace:: :class:`~hydpy.models.conv.conv_model.Calc_ActualConstant_ActualFactor_V1`
.. |Calc_Outputs_V1| replace:: :class:`~hydpy.models.conv.conv_model.Calc_Outputs_V1`
.. |Calc_Outputs_V2| replace:: :class:`~hydpy.models.conv.conv_model.Calc_Outputs_V2`
.. |Coordinates.nodes| replace:: :attr:`~hydpy.models.conv.conv_control.Coordinates.nodes`
.. |Coordinates| replace:: :class:`~hydpy.models.conv.conv_control.Coordinates`
.. |DefaultConstant| replace:: :class:`~hydpy.models.conv.conv_control.DefaultConstant`
.. |DefaultFactor| replace:: :class:`~hydpy.models.conv.conv_control.DefaultFactor`
.. |Distances| replace:: :class:`~hydpy.models.conv.conv_derived.Distances`
.. |Element| replace:: :class:`~hydpy.core.devicetools.Element`
.. |Heights.nodes| replace:: :attr:`~hydpy.models.conv.conv_control.Heights.nodes`
.. |Heights| replace:: :class:`~hydpy.models.conv.conv_control.Heights`
.. |InletSequence| replace:: :class:`~hydpy.core.sequencetools.InletSequence`
.. |InputCoordinates| replace:: :class:`~hydpy.models.conv.conv_control.InputCoordinates`
.. |InputHeights| replace:: :class:`~hydpy.models.conv.conv_control.InputHeights`
.. |MaxNmbInputs| replace:: :class:`~hydpy.models.conv.conv_control.MaxNmbInputs`
.. |MinNmbInputs| replace:: :class:`~hydpy.models.conv.conv_control.MinNmbInputs`
.. |NmbInputs.update| replace:: :func:`~hydpy.models.conv.conv_derived.NmbInputs.update`
.. |NmbOutputs.update| replace:: :func:`~hydpy.models.conv.conv_derived.NmbOutputs.update`
.. |Node.deploymode| replace:: :const:`~hydpy.core.devicetools.Node.deploymode`
.. |NodeSequence| replace:: :class:`~hydpy.core.sequencetools.NodeSequence`
.. |Node| replace:: :class:`~hydpy.core.devicetools.Node`
.. |OutletSequence| replace:: :class:`~hydpy.core.sequencetools.OutletSequence`
.. |OutputCoordinates| replace:: :class:`~hydpy.models.conv.conv_control.OutputCoordinates`
.. |OutputHeights| replace:: :class:`~hydpy.models.conv.conv_control.OutputHeights`
.. |Power| replace:: :class:`~hydpy.models.conv.conv_control.Power`
.. |ProximityOrder| replace:: :class:`~hydpy.models.conv.conv_derived.ProximityOrder`
.. |Return_Mean_V1| replace:: :class:`~hydpy.models.conv.conv_model.Return_Mean_V1`
.. |Weights| replace:: :class:`~hydpy.models.conv.conv_derived.Weights`
.. |conv| replace:: :mod:`~hydpy.models.conv`
.. |conv_fluxes.Inputs| replace:: :class:`~hydpy.models.conv.conv_fluxes.Inputs`
.. |conv_fluxes.Outputs| replace:: :class:`~hydpy.models.conv.conv_fluxes.Outputs`
.. |conv_model.Model| replace:: :class:`~hydpy.models.conv.conv_model.Model`
.. |numpy.nan| replace:: :const:`~numpy.nan`

.. _conv:

conv
====

.. automodule:: hydpy.models.conv
    :members:
    :show-inheritance:
    :exclude-members: CLASSES, RUN_METHODS, ADD_METHODS, INLET_METHODS, OUTLET_METHODS, RECEIVER_METHODS, SENDER_METHODS, PART_ODE_METHODS, FULL_ODE_METHODS, CONTROLPARAMETERS, DERIVEDPARAMETERS, FIXEDPARAMETERS, REQUIREDSEQUENCES, UPDATEDSEQUENCES, RESULTSEQUENCES, SOLVERPARAMETERS, SOLVERSEQUENCES, SUBMETHODS, SUBMODELS, fastaccess, fastaccess_new, fastaccess_old, pars, seqs, ReceiverSequences, InputSequences, StateSequences, LogSequences, AideSequences, SenderSequences
